<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
                xmlns:tools="http://schemas.android.com/tools"
                android:layout_width="match_parent"
                android:layout_height="match_parent" xmlns:app="http://schemas.android.com/apk/res-auto"
                tools:context=".LoginFragment">


    <!--<RelativeLayout-->
            <!--android:id="@+id/relative_layout"-->
            <!--android:layout_width="300px"-->
            <!--android:layout_marginTop="20px"-->
            <!--android:layout_height="wrap_content"-->
            <!--android:layout_centerHorizontal="true">-->

        <!--<com.mikhaellopez.circularimageview.CircularImageView-->
                <!--android:id="@+id/profile_icon"-->
                <!--android:layout_width="192px"-->
                <!--android:layout_height="192px"-->
                <!--android:scaleType="centerInside"-->
                <!--android:src="@drawable/logo"-->
                <!--app:civ_border_color="@android:color/white"-->
                <!--app:civ_border_width="2dp" />-->

        <!--<com.mikhaellopez.circularimageview.CircularImageView-->
                <!--android:id="@+id/img_plus"-->
                <!--android:layout_width="150px"-->
                <!--android:layout_height="150px"-->
                <!--android:layout_alignParentTop="@id/profile_icon"-->
                <!--android:layout_alignParentRight="true"-->
                <!--android:src="@drawable/mun_logo"-->
                <!--app:civ_shadow="true"-->
                <!--app:civ_shadow_radius="1" />-->
    <!--</RelativeLayout>-->


    <TextView
            android:id="@+id/tv_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/app_name"
            android:textSize="50sp"
            android:layout_marginLeft="25dp"
            android:layout_marginBottom="10dp"
            android:layout_above="@id/tv_subtitle"/>

    <TextView
            android:id="@+id/tv_subtitle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/tag"
            android:textSize="17sp"
            android:layout_marginLeft="25dp"
            android:layout_marginBottom="50dp"
            android:layout_above="@id/et_design1"/>

    <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_above="@id/et_design"
            android:id="@+id/et_design1">
    <EditText
            android:id="@+id/et_email"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:hint="@string/e_mail"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp"
            android:padding="15dp"
            android:inputType="textEmailAddress"
            android:background="@drawable/et_custom"
            android:textSize="15sp" />
    </android.support.design.widget.TextInputLayout>

    <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/et_design"
            android:layout_centerInParent="true"
            app:passwordToggleEnabled="true">
    <EditText
            android:id="@+id/et_password"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:hint="@string/password"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp"
            android:layout_marginTop="10dp"
            android:padding="15dp"
            android:inputType="textPassword"
            android:background="@drawable/et_custom"
            android:textSize="15sp" />
    </android.support.design.widget.TextInputLayout>


    <Button
            android:id="@+id/btn_login"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/et_design"
            android:background="@drawable/btn_custom"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp"
            android:layout_marginTop="15dp"
            android:textColor="@android:color/white"
            android:text="@string/login"/>

    <ImageView
            android:layout_width="30dp"
            android:layout_height="30dp"
            android:src="@drawable/ic_arrow_right"
            android:layout_above="@id/swipeRight"
            android:layout_centerHorizontal="true"/>

    <TextView
            android:id="@+id/swipeRight"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/swipe_left_for_register"
            android:textSize="15sp"
            android:layout_centerHorizontal="true"
            android:layout_alignParentBottom="true"
            android:layout_marginBottom="20dp"/>

</RelativeLayout>