<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent" xmlns:app="http://schemas.android.com/apk/res-auto"
        android:orientation="vertical"
        tools:context=".RegisterFragment">


    <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:passwordToggleTint="@color/colorPrimary">
        <TextView
                android:id="@+id/tv_logo"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/register"
                android:textAlignment="center"
                android:textSize="25sp"
                android:layout_marginLeft="25dp"
                android:layout_marginBottom="5dp"
                android:layout_marginTop="2dp" />
    </android.support.design.widget.TextInputLayout>
    <RelativeLayout
            android:layout_width="@dimen/toolbar_profile_width"
            android:layout_height="wrap_content"
    android:layout_gravity="center">

        <com.mikhaellopez.circularimageview.CircularImageView
                android:id="@+id/imgIcon"
                android:layout_width="@dimen/toolbar_profile_width"
                android:layout_height="@dimen/toolbar_profile_width"
                android:scaleType="centerInside"
                android:src="@drawable/firefighter_240"
                app:civ_border_color="@android:color/white"
                android:tag="old"
                app:civ_border_width="2dp" />

        <com.mikhaellopez.circularimageview.CircularImageView
                android:id="@+id/img_plus"
                android:layout_width="@dimen/ic_plus_width"
                android:layout_height="@dimen/ic_plus_width"
                android:layout_alignBottom="@id/imgIcon"
                android:layout_alignParentRight="true"
                android:src="@drawable/ic_plus"
                app:civ_shadow="true"
                app:civ_shadow_radius="1" />
    </RelativeLayout>


    <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:passwordToggleTint="@color/colorPrimary">
        <EditText
                android:id="@+id/et_name"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:hint="@string/your_name"
                android:layout_marginLeft="20dp"
                android:layout_marginRight="20dp"
                android:layout_marginBottom="10dp"
                android:padding="15dp"
                android:inputType="textPersonName"
                android:background="@drawable/et_custom"
                android:textSize="15sp"/>
    </android.support.design.widget.TextInputLayout>
    <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:passwordToggleTint="@color/colorPrimary">
    <EditText
            android:id="@+id/et_email"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:hint="@string/e_mail"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp"
            android:layout_marginBottom="10dp"
            android:padding="15dp"
            android:inputType="textEmailAddress"
            android:background="@drawable/et_custom"
            android:textSize="15sp" />
    </android.support.design.widget.TextInputLayout>
    <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:passwordToggleTint="@color/colorPrimary">
        <EditText
                android:id="@+id/et_mobile_number"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:hint="Mobile Number"
                android:layout_marginLeft="20dp"
                android:layout_marginRight="20dp"
                android:layout_marginBottom="10dp"
                android:padding="15dp"
                android:inputType="number"
                android:background="@drawable/et_custom"
                android:textSize="15sp" />
    </android.support.design.widget.TextInputLayout>
    <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:passwordToggleTint="@color/colorPrimary">
    <EditText
            android:id="@+id/et_address"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:hint="Address"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp"
            android:layout_marginBottom="10dp"
            android:padding="15dp"
            android:inputType="text"
            android:background="@drawable/et_custom"
            android:textSize="15sp" />
    </android.support.design.widget.TextInputLayout>
    <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:passwordToggleTint="@color/colorPrimary">
    <EditText
            android:id="@+id/et_dob"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:hint="Date of Birth"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp"
            android:layout_marginBottom="10dp"
            android:focusable="false"
            android:padding="15dp"
            android:background="@drawable/et_custom"
            android:textSize="15sp" />
    </android.support.design.widget.TextInputLayout>

    <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:passwordToggleEnabled="true">

            <EditText

                    android:id="@+id/et_password"
                    android:layout_width="match_parent"
                    android:layout_height="50dp"
                    android:hint="@string/password"
                    android:textColorHint="@color/colorPrimary"
                    android:layout_marginLeft="20dp"
                    android:layout_marginRight="20dp"
                    android:layout_marginBottom="10dp"
                    android:padding="15dp"
                    android:inputType="textPassword"
                    android:background="@drawable/et_custom"
                    android:textSize="15sp" />
    </android.support.design.widget.TextInputLayout>

    <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:passwordToggleEnabled="true">
    <EditText
            android:id="@+id/et_repassword"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:hint="@string/re_type_password"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp"
            android:padding="15dp"
            android:inputType="textPassword"
            android:background="@drawable/et_custom"
            android:textSize="15sp" />
    </android.support.design.widget.TextInputLayout>
    <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1">

        <Button
                android:id="@+id/btn_register"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/btn_custom"
                android:layout_marginLeft="20dp"
                android:layout_marginRight="20dp"
                android:layout_marginTop="15dp"
                android:textColor="@android:color/white"
                android:text="@string/register"/>

        <ImageView
                android:layout_width="30dp"
                android:layout_height="30dp"
                android:src="@drawable/ic_arrow_left"
                android:layout_above="@id/swipeLeft"
                android:layout_centerHorizontal="true"/>

        <TextView
                android:id="@+id/swipeLeft"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/swipe_right_for_login"
                android:textSize="15sp"
                android:layout_centerHorizontal="true"
                android:layout_alignParentBottom="true"
                android:layout_marginBottom="20dp"/>

    </RelativeLayout>

</LinearLayout>